@@ -72,6 +72,7 @@ typedef struct {
     int upload_max;
     int upload_files_to_var;
     int separate_virtual_interps;
+    int honor_header_only_reqs;			/* default: 0 */
     char *server_name;
     char *upload_dir;
     table *rivet_server_vars;
